# tailestim

./: .gitignore  .readthedocs.yaml  DEVELOP.md  README.md  pyproject.toml
.github/workflows/: release.yml  test-python-requirements.yml  test.yml
docs/: api.rst  conf.py  requirements.txt  result.rst  usage.rst
docs/estimators/: hill.rst  kernel.rst  moments.rst  pickands.rst  smooth_hill.rst
examples/: example.ipynb  example.py  testing.ipynb  validation.ipynb
src/tailestim/: __about__.py  __init__.py  datasets.py  hill.py  kernel.py  moments.py  pickands.py  smooth_hill.py  tail_methods.py
src/tailestim/estimators/: __init__.py  base.py  bulk_fit.py  estimator_set.py  hill.py  kernel.py  moments.py  pickands.py  result.py  smooth_hill.py  tail_methods.py
src/tailestim/estimators/plot/: plot_methods.py
tests/: test_datasets.py  test_estimator_set.py  test_tail_methods.py  test_tailestimation_validation.py
