[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailestim"
dynamic = ["version"]
description = 'A Python package for estimating tail parameters of heavy-tailed distributions, which is useful for analyzing power-law behavior in complex networks.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ['power-law', 'complex-network', 'heavy-tail', 'network-science']
authors = [
  { name = "Minami Ueda", email = "minami.ueda@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=1.19",
  "matplotlib>=3.5"
]

[project.urls]
Documentation = "https://tailestim.readthedocs.io/en/latest/index.html"
Issues = "https://github.com/mu373/tailestim/issues"
Source = "https://github.com/mu373/tailestim"

[dependency-groups]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "mypy>=1.0.0",
  "ruff>=0.8.0",
]
docs = [
  "sphinx>=8.0.0; python_version >= '3.10'",
  "pydata-sphinx-theme>=0.15.0; python_version >= '3.10'",
  "sphinx-autodoc-typehints>=1.25.0; python_version >= '3.10'",
  "numpydoc>=1.5.0; python_version >= '3.10'",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tailestim"]
include = ["src/tailestim/data/*.dat"]

[tool.hatch.build.targets.wheel.sources]
"src/tailestim" = "tailestim"

[tool.hatch.version]
path = "src/tailestim/__about__.py"


[tool.coverage.run]
source_pkgs = ["tailestim", "tests"]
branch = true
parallel = true
omit = [
  "src/tailestim/__about__.py",
]

[tool.coverage.paths]
tailestim = ["src/tailestim", "*/tailestim/src/tailestim"]
tests = ["tests", "*/tailestim/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
]
ignore = [
  "E501",  # line length handled by ruff format
]

[tool.ruff.lint.per-file-ignores]
"src/tailestim/estimators/plot/*" = ["F841", "E741"]

[tool.ruff.lint.isort]
known-first-party = ["tailestim"]
